# e

./: .gitignore  CMakeLists.txt  ElegantParser.hpp  Maxx.cpp  elegant.evo  evo.cpp  main.cpp  test.ele  test_closures_cow.ele
.github/workflows/: main.yml
